--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "client = OpenAI(api_key=api_key)  #Initialize the OpenAI client with the API key\n",
     "import pandas as pd\n",
     "from Bio import SeqIO\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +167,18 @@
      "text": [
       "\n",
       "Model [1/6]: gpt-3.5-turbo:   0%|          | 0/10 [00:20<?, ?it/s]\n",
-      "File [1/10]: enhancer:  10%|█         | 10/98 [00:20<02:54,  1.99s/it, Gene 11/98]"
+      "                                                                                  \n",
+      "                                                                                         \n",
+      "                                                                                      \n",
+      "                                                                                            \n",
+      "                                                                                          \n",
+      "                                                                                            \n",
+      "                                                                                         \n",
+      "                                                                                      \n",
+      "                                                                                            \n",
+      "                                                                                      \n",
+      "Model [1/6]: gpt-3.5-turbo: 100%|██████████| 10/10 [45:19<00:00, 271.94s/it]\n",
+      "Model [2/6]: gpt-4o-mini: 100%|██████████| 10/10 [1:33:15<00:00, 559.59s/it]\n"
      ]
     }
    ],
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,25 +244,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['No' 'No' 'No' ... 'No' 'No' 'Yes']\n",
+      "['No' 'No' 'No' ... 'No' 'Yes' 'Yes']\n"
+     ]
+    }
+   ],
    "source": [
     "df['hallucination_classification'] = df['hallucination_classification'].apply(\n",
-    "    lambda x: 'Yes' if isinstance(x, str) and x.split()[0].lower() == 'yes' else\n",
-    "              'No' if isinstance(x, str) and x.split()[0].lower() == 'no' else np.nan\n",
+    "    lambda x: 'Yes' if isinstance(x, str) and x.split()[0].lower()[:3] == 'yes' else\n",
+    "              'No' if isinstance(x, str) and x.split()[0].lower()[:2] == 'no' else np.nan\n",
     ")\n",
     "print(df['hallucination_classification'].values)\n",
     "\n",
     "df['classification'] = df['classification'].apply(\n",
-    "    lambda x: 'Yes' if isinstance(x, str) and x.split()[0].lower() == 'yes' else\n",
-    "              'No' if isinstance(x, str) and x.split()[0].lower() == 'no' else np.nan\n",
-    ")"
+    "    lambda x: 'Yes' if isinstance(x, str) and x.split()[0].lower()[:3] == 'yes' else\n",
+    "              'No' if isinstance(x, str) and x.split()[0].lower()[:2] == 'no' else np.nan\n",
+    ")\n",
+    "print(df['classification'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "file_name                       0\n",
+       "gene                            0\n",
+       "question                        0\n",
+       "model                           0\n",
+       "hallucination                   0\n",
+       "hallucination_classification    1\n",
+       "classification                  0\n",
+       "correct                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,12 +313,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hallucination_correct</th>\n",
+       "      <th>no_hallucination_correct</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gpt-3.5-turbo</th>\n",
+       "      <td>0.499458</td>\n",
+       "      <td>0.486457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gpt-4o-mini</th>\n",
+       "      <td>0.474026</td>\n",
+       "      <td>0.508658</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               hallucination_correct  no_hallucination_correct\n",
+       "model                                                         \n",
+       "gpt-3.5-turbo               0.499458                  0.486457\n",
+       "gpt-4o-mini                 0.474026                  0.508658"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grouped_results = df.groupby('model')[['hallucination_correct', 'no_hallucination_correct']].mean()\n",
     "grouped_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>enhancer</th>\n",
+       "      <th>promoter</th>\n",
+       "      <th>splice_site</th>\n",
+       "      <th>methylated</th>\n",
+       "      <th>protein_coding</th>\n",
+       "      <th>AVG</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th>hallucination_status</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">gpt-3.5-turbo</th>\n",
+       "      <th>Hallucination</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.485</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.512563</td>\n",
+       "      <td>0.531915</td>\n",
+       "      <td>0.4973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No Hallucination</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.495</td>\n",
+       "      <td>0.521429</td>\n",
+       "      <td>0.552764</td>\n",
+       "      <td>0.367021</td>\n",
+       "      <td>0.4872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">gpt-4o-mini</th>\n",
+       "      <th>Hallucination</th>\n",
+       "      <td>0.494898</td>\n",
+       "      <td>0.505</td>\n",
+       "      <td>0.492857</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.377660</td>\n",
+       "      <td>0.4741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No Hallucination</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.514286</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.531915</td>\n",
+       "      <td>0.5092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "feature                             enhancer  promoter  splice_site  \\\n",
+       "model         hallucination_status                                    \n",
+       "gpt-3.5-turbo Hallucination         0.500000     0.485     0.457143   \n",
+       "              No Hallucination      0.500000     0.495     0.521429   \n",
+       "gpt-4o-mini   Hallucination         0.494898     0.505     0.492857   \n",
+       "              No Hallucination      0.500000     0.500     0.514286   \n",
+       "\n",
+       "feature                             methylated  protein_coding     AVG  \n",
+       "model         hallucination_status                                      \n",
+       "gpt-3.5-turbo Hallucination           0.512563        0.531915  0.4973  \n",
+       "              No Hallucination        0.552764        0.367021  0.4872  \n",
+       "gpt-4o-mini   Hallucination           0.500000        0.377660  0.4741  \n",
+       "              No Hallucination        0.500000        0.531915  0.5092  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enhancer_hallucination_correct = df[df['file_name'].str.contains(\"enhancer\")].groupby('model')['hallucination_correct'].mean()\n",
+    "enhancer_no_hallucination_correct = df[df['file_name'].str.contains(\"enhancer\")].groupby('model')['no_hallucination_correct'].mean()\n",
+    "\n",
+    "promoter_hallucination_correct = df[df['file_name'].str.contains(\"promoter\")].groupby('model')['hallucination_correct'].mean()\n",
+    "promoter_no_hallucination_correct = df[df['file_name'].str.contains(\"promoter\")].groupby('model')['no_hallucination_correct'].mean() \n",
+    "\n",
+    "splice_site_hallucination_correct = df[df['file_name'].str.contains(\"splice_site\")].groupby('model')['hallucination_correct'].mean()     \n",
+    "splice_site_no_hallucination_correct = df[df['file_name'].str.contains(\"splice_site\")].groupby('model')['no_hallucination_correct'].mean()\n",
+    "\n",
+    "methylated_hallucination_correct = df[df['file_name'].str.contains(\"methylated\")].groupby('model')['hallucination_correct'].mean()   \n",
+    "methylated_no_hallucination_correct = df[df['file_name'].str.contains(\"methylated\")].groupby('model')['no_hallucination_correct'].mean() \n",
+    "\n",
+    "protein_coding_hallucination_correct = df[df['file_name'].str.contains(\"protein_coding\")].groupby('model')['hallucination_correct'].mean()   \n",
+    "protein_coding_no_hallucination_correct = df[df['file_name'].str.contains(\"protein_coding\")].groupby('model')['no_hallucination_correct'].mean()\n",
+    "\n",
+    "data = {\n",
+    "    'enhancer_hallucination_correct': enhancer_hallucination_correct,\n",
+    "    'enhancer_no_hallucination_correct': enhancer_no_hallucination_correct,\n",
+    "    'promoter_hallucination_correct': promoter_hallucination_correct,\n",
+    "    'promoter_no_hallucination_correct': promoter_no_hallucination_correct,\n",
+    "    'splice_site_hallucination_correct': splice_site_hallucination_correct,\n",
+    "    'splice_site_no_hallucination_correct': splice_site_no_hallucination_correct,\n",
+    "    'methylated_hallucination_correct': methylated_hallucination_correct,\n",
+    "    'methylated_no_hallucination_correct': methylated_no_hallucination_correct,\n",
+    "    'protein_coding_hallucination_correct': protein_coding_hallucination_correct,\n",
+    "    'protein_coding_no_hallucination_correct': protein_coding_no_hallucination_correct\n",
+    "}\n",
+    "\n",
+    "pivot_data = []\n",
+    "\n",
+    "for feature in ['enhancer', 'promoter', 'splice_site', 'methylated', 'protein_coding']:\n",
+    "    hall_series = data[f'{feature}_hallucination_correct']\n",
+    "    \n",
+    "    no_hall_series = data[f'{feature}_no_hallucination_correct']\n",
+    "    \n",
+    "    for model in hall_series.index:\n",
+    "        pivot_data.append({\n",
+    "            'model': model,\n",
+    "            'hallucination_status': 'Hallucination',\n",
+    "            'feature': feature,\n",
+    "            'correct_count': hall_series[model]\n",
+    "        })\n",
+    "        \n",
+    "        pivot_data.append({\n",
+    "            'model': model,\n",
+    "            'hallucination_status': 'No Hallucination',\n",
+    "            'feature': feature,\n",
+    "            'correct_count': no_hall_series[model]\n",
+    "        })\n",
+    "\n",
+    "long_df = pd.DataFrame(pivot_data)\n",
+    "\n",
+    "pivot_df = long_df.pivot_table(\n",
+    "    index=['model', 'hallucination_status'],\n",
+    "    columns='feature',\n",
+    "    values='correct_count'\n",
+    ")\n",
+    "\n",
+    "feature_order = ['enhancer', 'promoter', 'splice_site', 'methylated', 'protein_coding']\n",
+    "pivot_df = pivot_df[feature_order]\n",
+    "\n",
+    "\n",
+    "pivot_df['AVG'] = pivot_df.mean(axis=1)\n",
+    "\n",
+    "pivot_df['AVG'] = pivot_df['AVG'].round(4) \n",
+    "\n",
+    "pivot_df\n",
+    "\n"
    ]
   },
   {
